# ManchuAI-OCR

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  data.yaml  evaluation.yaml  inference.yaml  models.yaml  training.yaml
paper/tables/: 01_hyperparameters_table.tex  02_performance_comparison_manchu.tex  03_performance_comparison_roman.tex  04_error_analysis.tex  06_software_environment.tex  07_inference_settings.tex  08_crnn_architecture.tex  09_crnn_training.tex
results/metrics/crnn-base-3m/: checkpoint-101250_validation.json  checkpoint-105000_validation.json  checkpoint-108750_validation.json  checkpoint-112500_validation.json  checkpoint-11250_validation.json  checkpoint-116250_validation.json  checkpoint-120000_validation.json  checkpoint-123750_validation.json  checkpoint-127500_validation.json  checkpoint-131250_validation.json  checkpoint-135000_validation.json  checkpoint-138750_validation.json  checkpoint-142500_validation.json  checkpoint-146250_validation.json  checkpoint-150000_validation.json  checkpoint-15000_validation.json  checkpoint-153750_validation.json  checkpoint-157500_validation.json  (+82 more)
scripts/: download_data.py  download_models.py  evaluate.py  evaluate_best.py  evaluate_checkpoints.py  generate_figures.py  generate_report.py  pad_images.py  train.py
scripts/paper/: generate.py  utils.py
src/CRNN/: dataset.py  inference.py  model.py  optimizer.py  scheduler.py  trainer.py  utils.py
src/evaluation/: crnn_evaluator.py  metrics.py  openai_evaluator.py  utils.py  vlm_evaluator.py
src/training/: crnn_trainer.py  openai_trainer.py  vlm_trainer.py
src/utils/: config.py  dataset.py  files.py  model.py  visualization.py
(+705 files in other folders)
